# PortaBrasil

./: .gitignore  .gitnore  P1_full.json  P1_simple.json  README.md  README_PDF_TOOL.md  pdf_data.db  pdf_to_json.py  portabrasil.sql  save_to_database.py  使用说明.md
Portabrasil-server/: README.md  database.py  main.py  parser_rules.py  pdf_parser.py  pyproject.toml  services.py
Portabrasil-server/app/: factory.py
Portabrasil-server/app/agents/: __init__.py  audit_agent.py  llm_factory.py  pdf_agent.py
Portabrasil-server/app/core/: auth.py  responses.py
Portabrasil-server/app/routes/: admin.py  ai_review.py  auth.py  business.py  cost.py  dashboard.py  documents.py  files.py  health.py  process.py  reports.py  tasks.py
Portabrasil-server/app/services/: __init__.py  audit_finance_service.py  llm_service.py
Portabrasil-server/docs/: API_TESTING.md  apifox-openapi.json
Portabrasil-server/sql/: add_cost_business_id.sql  database.py  demo_seed.sql  demo_seed_delete.sql  llm_audit_demo_delete.sql  llm_audit_demo_input.sql  schema.sql
Portabrasil-server/sql/migrations/: 20260416_add_ai_review_tables.sql  20260416_add_cost_module_tables.sql
Portabrasil-web/: package.json  vite.config.js
Portabrasil-web/customs-dashboard/: index.html
Portabrasil-web/src/: App.jsx  AppLayout.jsx  LoginPage.jsx  animated-characters.jsx  interactive-hover-button.jsx
docs/: README_pt.md  README_zh.md  审计演示指南.md  系统模块流程图.md  系统测试报告.md
docs/test-results/: 20260514-111843-environment.json  20260514-111843-login-failure.json  20260514-111944-environment.json  run_functional_rerun.py  (+19 more)
(+29 files in other folders)
